[gd_scene load_steps=4 format=3 uid="uid://bqpjytnf3tdb3"]

[ext_resource type="Script" uid="uid://c3qtqcvnh72o4" path="res://dec-14-2025/dec_14_2025.gd" id="1_r2q2s"]
[ext_resource type="PackedScene" uid="uid://dql4rkolmq8ud" path="res://inventory_ui.tscn" id="2_l28wk"]
[ext_resource type="PackedScene" uid="uid://2yq0ne3dvbba" path="res://item_card.tscn" id="3_15k61"]

[node name="Dec-14-2025" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2q2s")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="PlayerCard" parent="HBoxContainer/HBoxContainer" instance=ExtResource("3_15k61")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="HomebaseInventory" parent="HBoxContainer/HBoxContainer" instance=ExtResource("2_l28wk")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="AdventuringInventory" parent="HBoxContainer/HBoxContainer" instance=ExtResource("2_l28wk")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="BeginAdventure" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Begin Adventure
"

[node name="AdventurePanel" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="VBoxContainer" parent="HBoxContainer/AdventurePanel"]
layout_mode = 2

[node name="TurnCounter" type="RichTextLabel" parent="HBoxContainer/AdventurePanel/BoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Turn: 0"
fit_content = true
horizontal_alignment = 1

[node name="AdventureTitle" type="RichTextLabel" parent="HBoxContainer/AdventurePanel/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "Adventuring"
fit_content = true
horizontal_alignment = 1

[node name="EnemiesUI" parent="HBoxContainer/AdventurePanel/BoxContainer" instance=ExtResource("2_l28wk")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="GoHome" type="Button" parent="HBoxContainer/AdventurePanel/BoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 8
text = "Go Home"

[node name="GoDeeper" type="Button" parent="HBoxContainer/AdventurePanel/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
text = "Go Deeper"

[connection signal="pressed" from="HBoxContainer/BeginAdventure" to="." method="begin_adventure"]
[connection signal="pressed" from="HBoxContainer/AdventurePanel/BoxContainer/GoHome" to="." method="go_home"]
[connection signal="pressed" from="HBoxContainer/AdventurePanel/BoxContainer/GoDeeper" to="." method="go_deeper"]
